Change to base template to switch to main tag to fall in line with GDS and fix an error that means font sizes where out because they didn't get the GDS font sizing for the man page. Fixed an issue with spacing of checkboxes

--- a/src/AppBundle/Resources/assets/scss/digideps/_forms.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_forms.scss
@@ -279,10 +279,6 @@ ul.form-hint {
     
 }
 
-label.block-label {
-    margin-bottom: 0;
-}
-
 label.extra-top {
     margin-top: 3px;
 }
